# servers

./: .gitignore  DIAGNOSTICO-TECNICO-TECNICON.md  EMAIL-SPAM-PM15NOV.md  GSAN_ATENDIMENTO_COMPLETO.json  INVESTIGACAO-DB-CHAT.md  PM15NOV-DNS-E-CVE.md  RELATORIO-CHAT-EXECUCAO.md  STIRLING-PDF-USUARIOS.md  WhatsApp Consulta Pessoa.json  backup-mysql-all.sh  cahts-https-4443.conf  chat-interno-schema.sql  criar-tabelas-chat.sql  deploy-apidfe-vps.sh  deploy-cahts-vps.sh  evolution-Curso.json  instalar_fog.sh  instalar_minio.sh  instalar_minio_simples.sh  limpar_arquivos.sh  pm15nov-zone-dkim-dmarc.txt  vps-177.22.81.69-ufw-email.sh
backup_portainer_n8n_20260225/: README.txt  evoai.yaml  evolution.yaml  evolution_db_backup.sql  keycloak.yaml  metabase.yaml  n8n.yaml  portainer.yaml  postgres.yaml  stirlingpdf.yaml  supabase.yaml  traefik.yaml
docs/: evolution-minio-media-prompt.md
dou-alerta-ifrs/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
dou-alerta-ifrs/dou_alerta/: __init__.py  config.py  fetcher.py  mailer.py  main.py  models.py  parser.py  scorer.py  storage.py
dou-alerta-ifrs/tests/: conftest.py  test_scorer.py  test_storage.py
migrar-flow-crm-para-synki/: REVISAO-OPORTUNIDADE.md  gerar-migracao.sh  migracao.sql  migracao_resto.sql  migrar.py  pós-migração-oportunidades.sql
monitoring-vps/: README.md  UPTIME-KUMA-MONITORS.md  alerts.yml  cahts-monitoring.service  docker-compose.yml  prometheus.yml  start-monitoring.sh
vps-monitor/: PASSOS-192.168.56.10.md  README.md  ensure-on-server.sh  install-service.sh  (+3 more)
