[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dou-alerta-ifrs"
version = "1.0.0"
description = "Monitora DOU e envia alertas por e-mail para servidores IFRS/TI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "mypy>=1.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
